<resources>
    <string name="app_name">My Application</string>
    <string name="Numero1">operando 1</string>
    <string name="Numero2">operando 2</string>
    <string name="Resultado">Resultado</string>
    <string name="Calcular">Calcular</string>
    <string name="Suma">Suma</string>
    <string name="Resta">Resta</string>
    <string name="Multiplicacion">Multiplicacion</string>
    <string name="Division">Division</string>
    <string name="Error">Divison indefinida</string>
    <string name="opcion">Faltan operandos</string>

</resources>
