<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sebastianruiz.myapplication.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Numero1"
                android:id="@+id/eNum1"
                android:textSize="30sp"
                android:inputType="number"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Numero2"
                android:id="@+id/eNum2"
                android:textSize="30sp"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>
            <RadioGroup
                android:id="@+id/operacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10sp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Suma"
                    android:textSize="30sp"
                    android:id="@+id/bSuma"
                    android:onClick="click"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Resta"
                    android:textSize="30sp"
                    android:id="@+id/bResta"
                    android:onClick="click"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Multiplicacion"
                    android:textSize="30sp"
                    android:id="@+id/bMulti"
                    android:onClick="click"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Division"
                    android:textSize="30sp"
                    android:id="@+id/bDiv"
                    android:onClick="click"/>

            </RadioGroup>


            <Button
                android:id="@+id/bCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calcular"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10sp"

                android:textAllCaps="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Resultado"
                android:id="@+id/tResultado"
                android:textAlignment="center"
                android:textSize="40sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
